# lichess-player-data

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/config/: db.py
